--- a/package.json
+++ b/package.json
@@ -1,49 +1,20 @@
 {
   "name": "plugin-audio-alert",
-  "version": "0.0.0",
+  "version": "0.0.16",
   "private": true,
   "scripts": {
-    "bootstrap": "flex-plugin check-start",
-    "prebuild": "rimraf build && npm run bootstrap",
-    "build": "flex-plugin build",
-    "clear": "flex-plugin clear",
-    "predeploy": "npm run build",
-    "deploy": "flex-plugin deploy",
-    "eject": "flex-plugin eject",
-    "info": "flex-plugin info",
-    "postinstall": "npm run bootstrap",
-    "list": "flex-plugin list",
-    "remove": "flex-plugin remove",
-    "prestart": "npm run bootstrap",
-    "start": "flex-plugin start",
-    "test": "flex-plugin test --env=jsdom"
+    "postinstall": "flex-plugin pre-script-check"
   },
   "dependencies": {
-    "craco-config-flex-plugin": "^3.10.1",
-    "flex-plugin": "^3.5.0",
-    "flex-plugin-scripts": "^3.11.1",
-    "react": "16.5.2",
-    "react-dom": "16.5.2",
-    "react-emotion": "9.2.6",
-    "react-scripts": "3.4.1"
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@twilio/flex-plugin": "7.1.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@twilio/flex-ui": "^1",
-    "babel-polyfill": "^6.26.0",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "rimraf": "^3.0.0"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "@twilio/flex-plugin-scripts": "7.1.0",
+    "@twilio/flex-ui": "^2.8.2",
+    "react-test-renderer": "^17.0.2"
   }
 }
